src/index.css
body {
  margin: 0;
  padding-bottom: 10em;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  /* background-color: #2f323b; */
}
#filler {
  position: fixed;
  z-index: -1;
  display: flex;
  justify-content: space-between;
  left: 0;
  bottom: 0;
  height: 21%;
  width: 100%;
  color: black;
  text-align: center;
}
code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.section {
  height: 100%;
  background-attachment: fixed;
}

#login {
  display: flex;
  justify-content: center;
}

#acc {
  color: white;
}

#sign-in-form {
  top: 19em;
}
#form {
  position: fixed;
  bottom: 2em;
  left: 3em;
}

.image-border{
  border-radius: 10% !important;
}

#next {
  position: fixed;
  bottom: 10em;
  left: 1em;
}

#sign-in-bg {
  height: 80vh;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: contain;
  z-index: -2;
  background-color: #2f323b;
}

#bg-img {
  width: 100%;
}

footer {
  position: fixed;
  display: flex;
  justify-content: space-between;
  left: 0;
  bottom: 0;
  height: 1%;
  width: 100%;
  color: black;
  text-align: center;
}
.bubble {
  position: relative;
  padding: 1em;
  background: rgb(226, 226, 226);
  border-radius: 0.4em;
}

.bubble:after {
	content: '';
	position: absolute;
	left: 0;
	top: 50%;
	width: 0;
	height: 0;
	border: 20px solid transparent;
	border-right-color:rgb(226, 226, 226);
	border-left: 0;
	border-top: 0;
	margin-top: -10px;
	margin-left: -20px;
}

.bubble-user {
  position: relative;
  padding: 1em;
  background: lightgreen;
  border-radius: 0.4em;
}

.bubble-user:after {
	content: '';
	position: absolute;
	right: 0;
	top: 50%;
	width: 0;
	height: 0;
	border: 20px solid transparent;
	border-left-color: lightgreen;
	border-right: 0;
	border-top: 0;
	margin-top: -10px;
	margin-right: -20px;
}

#box-header { 
  position: fixed;
  top: 0;
  width: 100%; 
}

